:lipstick: Fix vertical alignment of avatar and names

--- a/src/scss/partials/_posts.scss
+++ b/src/scss/partials/_posts.scss
@@ -32,6 +32,7 @@ main.pageType-addPost {
 .imgname {
   display: flex;
   width: 250px;
+  align-items: center;
   // margin: 0 auto;
 }
 
